# crypto-trading-bot-v2

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.py  testing.py  upgraded_backtest.py
.github/workflows/: main.yml
backtesting/: backtest_legacy.py  backtester.py  backtesting.ipynb
bot/: bot_legacy.py  bot_runner.py  redis_utils.py  utils.py  vars.json  vars.json.backup
junk/: combined_backtester.py  upgraded_backtest.py
scraping/: old_scraping.py  profiling.py  scraper.py  scraping.ipynb
