[tool.poetry]
name = "crypto-trading-bot"
version = "0.1.0"
description = "This is a binance crypto-trading automatic bot."
authors = ["RomanchenkoAS <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
vectorbt = "^0.25.5"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
virtualenvs.in-project = true
